[package]
name = "think-morse"
version = "0.1.0"
edition = "2021"
authors = ["Arbaaz Laskar <arzkar.dev@gmail.com>"]
description = "A CLI to flash morse code using the thinkpad's lid logo led, only works in Linux."
include = [
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/src/**",
]
license = "Apache-2.0"
repository = "https://github.com/arzkar/think-morse"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
morse = "0.1.0"